# sugarfree

./: pyproject.toml
src/suggarfree/: app.py  suggarfree.tcss
src/suggarfree/screens/: main_screen.py
src/suggarfree/screens/modal/: add_wallet_addr.py
src/suggarfree/widgets/: __init__.py  footer.py  header.py  sidebar.py
